--- a/src/resource/views/layouts/main.hbs
+++ b/src/resource/views/layouts/main.hbs
@@ -1,21 +1,30 @@
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Restaurant POS</title>
-    <link rel="stylesheet" href="/css/app.css">
-  </head>
 
-  <body>
-      <div class="app">
-
-        {{> header}}
-
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>
+        POS
+    </title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@800&display=swap" rel="stylesheet">
+    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="/css/style.css">
+</head>
+<body>
+   
+    
+        {{>header}}
+    
+       
         {{{body}}}
-
-        {{> footer}}
-
-      </div>
-  </body>
+        
+    
+        {{>footer}}
+    
+  
+</body>
 </html>
