--- a/src/resource/views/about.hbs
+++ b/src/resource/views/about.hbs
@@ -1,1 +1,40 @@
-<h1>About page</h1>
+<!-- SECION ABOUT -->
+    <section class="about fullheight align-items-center" id="about">
+        <div class="container">
+            <div class="row">
+                <div class="col-7 h-xs">
+                    <img src="img/banner2.jpg" alt=""
+                        class="fullwidth left-to-right play-on-scroll">
+                </div>
+                <div class="col-5 col-xs-12 align-items-center">
+                    <div class="about-slogan right-to-left play-on-scroll">
+                        <h3>
+                            Your <span class="primary-color">experience</span> is the
+                            <span class="primary-color">most important</span>
+                        </h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, labore nisi non
+                            molestias, minus laboriosam nostrum impedit iure facilis odio unde quia ad sunt corrupti
+                            dolores ratione voluptatibus quidem explicabo.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- END SECION ABOUT -->
+    <!-- FOOD MENU SECTION -->
+    <section class="align-items-center bg-img bg-img-fixed" id="food-menu-section"
+        style="background-image: url(img/homepage.jpg);">
+        <div class="container">
+            <div class="food-menu right-to-left play-on-scroll">
+                <h3>
+                    Established in <span class="primary-color">2021</span>
+                    <br>by a group of cuisine <br><span class="primary-color">enthusiasts</span>
+                </h3>
+                <p>
+                    
+                </p>
+            </div>
+        </div>
+    </section>
