--- a/src/resource/views/home.hbs
+++ b/src/resource/views/home.hbs
@@ -1,1 +1,24 @@
-<h1>Home page</h1>
+<section id="home" class="fullheight align-items-center bg-img bg-img-fixed"
+        style="background-image: url(img/homepage.jpg);">
+        <div class="container">
+            <div class="row">
+                <div class="col-6 col-xs-12">
+                    <div class="slogan">
+                        <h1 class="left-to-right play-on-scroll">
+                            POS
+                        </h1>
+                        <p class="left-to-right play-on-scroll delay-2 intro">
+                            quote
+                        </p>
+                        <div class="left-to-right play-on-scroll delay-4">
+                            <a href="menu">
+                            <button>
+                                Order now
+                            </button>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
