add responsive + layout mod

--- a/4_Implementation/src/resource/views/about.hbs
+++ b/4_Implementation/src/resource/views/about.hbs
@@ -1,21 +1,23 @@
-<!-- SECION ABOUT -->
+    <!-- SECION ABOUT -->
     <section class="about fullheight align-items-center" id="about">
         <div class="container">
             <div class="row">
                 <div class="col-7 h-xs">
-                    <img src="img/banner2.jpg" alt=""
+                    <img src="img/about-dish.jpg" alt=""
                         class="fullwidth left-to-right play-on-scroll">
                 </div>
                 <div class="col-5 col-xs-12 align-items-center">
                     <div class="about-slogan right-to-left play-on-scroll">
                         <h3>
-                            Your <span class="primary-color">experience</span> is the
-                            <span class="primary-color">most important</span>
+                            About <span class="primary-color">POS</span>
                         </h3>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, labore nisi non
-                            molestias, minus laboriosam nostrum impedit iure facilis odio unde quia ad sunt corrupti
-                            dolores ratione voluptatibus quidem explicabo.
+                            Since 2019, The POS Restaurant has been the go-to diner for residents 
+                            of Saigon, Vietnam. Our diner serves breakfast all day, in addition to wholesome 
+                            and flavorful dining options for lunch and dinner. From salads, hot-dishes to pastas, 
+                            you’ll find all kinds of hearty meals prepared fresh at The POS Restaurant. 
+                            Our diner also has a full bakery with delicious baked goods and other treats, including our 
+                            famous cheesecake. Sounds delicious, right?
                         </p>
                     </div>
                 </div>
@@ -29,8 +31,9 @@
         <div class="container">
             <div class="food-menu right-to-left play-on-scroll">
                 <h3>
-                    Established in <span class="primary-color">2021</span>
-                    <br>by a group of cuisine <br><span class="primary-color">enthusiasts</span>
+                    Established in <span class="primary-color">2019</span>
+                    by a <span class="primary-color">Vietnamese chef</span> who has
+                    been living in both Vietnam and the UK for a long time.
                 </h3>
                 <p>
                     
@@ -38,3 +41,92 @@
             </div>
         </div>
     </section>
+    <!-- END FOOD MENU SECTION -->
+    <!-- TESTIMONIAL SECTION -->
+    <section id="testimonial">
+        <div class="container">
+            <div class="row">
+                <div class="col-4 col-xs-12">
+                    <div class="review-wrap zoom play-on-scroll delay-2">
+                        <div class="review-content">
+                            <p>
+                                Amaazing food! The whole experience from start to finish is great waitress 
+                                is always so friendly and kind. The food can’t get better and the prices are 
+                                fair for the portion size. Always a great spot to get great food.
+                            </p>
+                            <div class="review-img bg-img"
+                                style="background-image: url(img/person1.jpg);">
+                            </div>
+                        </div>
+                        <div class="review-info">
+                            <h3>
+                                Person 1
+                            </h3>
+                            <div class="rating">
+                                <i class="bx bxs-star"></i>
+                                <i class="bx bxs-star"></i>
+                                <i class="bx bxs-star"></i>
+                                <i class="bx bxs-star"></i>
+                                <i class="bx bxs-star"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4 col-xs-12">
+                    <div class="zoom play-on-scroll">
+                        <div class="review-wrap active">
+                            <div class="review-content">
+                                <p>
+                                    Absolutely amazing! The place is beautiful and staff are super friendly and the 
+                                    food is delicious. I love that you get a lot of food as well for the price. It’s definitely 
+                                    not like other expensive restaurants and you only get a small amount of food. I am definitely going back.
+                                </p>
+                                <div class="review-img bg-img"
+                                    style="background-image: url(img/person2.jpg);">
+                                </div>
+                            </div>
+                            <div class="review-info">
+                                <h3>
+                                    Person 2
+                                </h3>
+                                <div class="rating">
+                                    <i class='bx bxs-star'></i>
+                                    <i class='bx bxs-star'></i>
+                                    <i class='bx bxs-star'></i>
+                                    <i class='bx bxs-star'></i>
+                                    <i class='bx bxs-star'></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4 col-xs-12">
+                    <div class="review-wrap zoom play-on-scroll delay-4">
+                        <div class="review-content">
+                            <p>
+                                Legitimately the best restaurant around Saigon. Doesn’t matter what I get 
+                                I end up liking it. My partner and I have been eating here for a few years now. 
+                                They make the pasta for breakfast and probably the best pasta I’ve had.
+                            </p>
+                            <div class="review-img bg-img"
+                                style="background-image: url(img/person3.webp);">
+                            </div>
+                        </div>
+                        <div class="review-info">
+                            <h3>
+                                Person 3
+                            </h3>
+                            <div class="rating">
+                                <i class='bx bxs-star'></i>
+                                <i class='bx bxs-star'></i>
+                                <i class='bx bxs-star'></i>
+                                <i class='bx bxs-star'></i>
+                                <i class='bx bxs-star'></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- END TESTIMONIAL SECTION -->
