--- a/4_Implementation/src/public/css/style.css
+++ b/4_Implementation/src/public/css/style.css
@@ -17,6 +17,7 @@ a {
   color: unset;
   text-decoration: none;
 }
+
 #home h1 {
   font-family: "Exo 2", sans-serif;
 }
@@ -312,10 +313,14 @@ section {
   border-radius: 2rem;
 }
 
+/* .img-holder:hover {
+  transform: scale(2) rotate(45deg); } */
+
 .account {
   margin-top: 4rem;
+  color: var(--grey);
   padding: 2rem 0 0 0;
-  background-color: var(--white);
+  background-color: black;
   border-radius: 2rem;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
@@ -349,26 +354,33 @@ section {
 .user-func-container {
   display: flexbox;
   padding: 2rem;
-  background-color: var(--white);
+  background-color: black;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 8px 12px 0px;
 }
 
-.user-func-container p {
-  margin: 0;
-  padding: 0;
+.user-func-container span {
+  margin: 10px;
+  padding: 10px;
+  border-radius: 5%;
   text-align: middle;
-  color: black;
+  color: var(--grey);
   font-size: 1.3rem;
+}
+
+.user-func-container span:hover {
+  background-color: var(--primary-color);
+  color: white;
 }
 
 .user-func-container3 {
   display: flexbox;
   padding: 2rem;
-  background-color: var(--white);
+  background-color: black;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 8px 12px 0px;
   border-bottom-left-radius: 2rem;
   border-bottom-right-radius: 2rem;
 }
+
 .user-btn {
   width: 100%;
   height: 3rem;
@@ -377,13 +389,19 @@ section {
   border: 0;
 }
 
-.user-func-container3 p {
-  margin: 0;
-  padding: 0;
+.user-func-container3 span {
+  margin: 10px;
+  padding: 10px;
+  border-radius: 5px;
   text-align: middle;
   color: black;
   color: var(--primary-color);
   font-size: 1.3rem;
+}
+
+.user-func-container3 span:hover {
+  color: white;
+  background-color: var(--primary-color);
 }
 
 .item-info {
@@ -651,4 +669,678 @@ section {
 
 .mb-nav {
   display: none;
+}
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+  * {
+    font-size: 13px;
+  }
+  h1 {
+    font-size: 3rem !important;
+  }
+  span {
+    font-size: inherit;
+  }
+  .cart-btn i {
+    font-size: 2rem;
+  }
+  .about {
+    background-image: url(assets/banner1.jpg);
+    background-attachment: fixed;
+  }
+  #about2 {
+    background-image: url(assets/banner2.jpg);
+  }
+  .about-slogan.start {
+    transform: translateX(0) !important;
+  }
+  .food-menu {
+    padding: 4rem 0;
+  }
+  .food-item {
+    width: 50%;
+    height: 25rem;
+  }
+  .food-category {
+    overflow-y: scroll;
+  }
+  .food-category button {
+    width: max-content;
+  }
+  .user-info p {
+    margin: 0;
+    padding: 0;
+    text-align: middle;
+    color: black;
+    font-size: 1.3rem;
+  }
+  .user-info img {
+    margin: auto;
+    padding-bottom: 1rem;
+    max-height: 10rem;
+  }
+  .back-to-top {
+    bottom: 6rem;
+    right: 1rem;
+  }
+  .review-wrap.active {
+    transform: unset !important;
+  }
+  /* MOBILE NAV */
+  .mb-nav {
+    position: fixed;
+    bottom: 0;
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+    background-color: var(--white);
+    z-index: 99;
+    overflow: hidden;
+    border-top-left-radius: 2rem;
+    border-top-right-radius: 2rem;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  }
+  .mb-nav-item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex: 25%;
+    padding: 1rem 0;
+  }
+  .mb-nav-item i,
+  .mb-nav-item a {
+    font-size: 2rem;
+    color: var(--secon-color);
+    z-index: 2;
+    transition: 0.5s ease-in-out;
+  }
+  .mb-nav-item.active i {
+    color: var(--white);
+  }
+  .mb-move-item {
+    position: absolute;
+    left: 0;
+    width: 25%;
+    height: 100%;
+    background-color: var(--primary-color);
+    transition: 0.5s ease-in-out;
+  }
+  /* END MOBILE NAV */
+  .col-xs-1 {
+    width: 8.33%;
+  }
+  .col-xs-2 {
+    width: 16.66%;
+  }
+  .col-xs-3 {
+    width: 25%;
+  }
+  .col-xs-4 {
+    width: 33.33%;
+  }
+  .col-xs-5 {
+    width: 41.66%;
+  }
+  .col-xs-6 {
+    width: 50%;
+  }
+  .col-xs-7 {
+    width: 58.33%;
+  }
+  .col-xs-8 {
+    width: 66.66%;
+  }
+  .col-xs-9 {
+    width: 75%;
+  }
+  .col-xs-10 {
+    width: 83.33%;
+  }
+  .col-xs-11 {
+    width: 91.66%;
+  }
+  .col-xs-12 {
+    width: 100%;
+  }
+  .h-xs {
+    display: none;
+  }
+}
+
+/*Modal*/
+.overlay {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.7);
+  transition: opacity 500ms;
+  visibility: hidden;
+  opacity: 0;
+  z-index: 99;
+}
+
+.overlay:target {
+  visibility: visible;
+  opacity: 1;
+}
+
+.popup {
+  width: 50%;
+  margin: 2.5rem auto;
+  height: 80%;
+  padding: 25px;
+  background: #fff;
+  border-radius: 2rem;
+  position: relative;
+  transition: all 5s ease-in-out;
+  z-index: 99;
+}
+
+.popup .close {
+  position: absolute;
+  top: 5px;
+  right: 25px;
+  transition: all 200ms;
+  font-size: 2.8rem;
+  font-weight: bold;
+  text-decoration: none;
+  color: black;
+}
+
+.popup .close:hover {
+  color: var(--primary-color);
+}
+
+.modal-img {
+  top: 2rem;
+  height: 42%;
+  position: relative;
+  overflow: hidden;
+  border-radius: 2rem;
+}
+
+.modal-img-holder {
+  position: absolute;
+  top: 0.2rem;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transition: 0.5s ease-in-out;
+  border-radius: 2rem;
+}
+
+.modal-item-info {
+  overflow: hidden;
+  height: 25%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 3rem;
+  padding: 0 1rem;
+  text-align: left;
+}
+
+.modal-item-info h3 {
+  position: absolute;
+  top: 48%;
+  color: var(--primary-color);
+  font-size: 1.8rem;
+}
+
+.modal-item-info p {
+  margin-top: 2.5rem;
+  font-size: 1.1rem;
+}
+
+.modal-item-info > div:first-child {
+  text-align: left;
+  display: block;
+}
+
+.modal-checkout {
+  padding: 0 1rem;
+  height: 28%;
+  position: absolute;
+  bottom: 0;
+}
+
+.input-number {
+  width: 30%;
+  padding: 0 12px;
+  vertical-align: top;
+  text-align: center;
+  outline: none;
+}
+
+.input-number,
+.input-number-decrement,
+.input-number-increment {
+  border: 1px solid #ccc;
+  height: 40px;
+  user-select: none;
+}
+
+.input-number-decrement,
+.input-number-increment {
+  display: inline-block;
+  width: 30px;
+  line-height: 38px;
+  background: var(--primary-color);
+  color: var(--white);
+  text-align: center;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.input-number-decrement:active,
+.input-number-increment:active {
+  background: #ddd;
+}
+
+.input-number-decrement {
+  border-right: none;
+  border-radius: 4px 0 0 4px;
+}
+
+.input-number-increment {
+  border-left: none;
+  border-radius: 0 4px 4px 0;
+}
+
+.modal-price h3 {
+  margin-top: 0.5rem;
+  font-size: 1.5rem;
+}
+
+.addtocart-button {
+  padding: 1rem 5rem;
+  outline: none;
+  border: none;
+  border: 0.125rem solid var(--primary-color);
+  background-color: white;
+  border-radius: 1rem;
+  color: var(--primary-color);
+  cursor: pointer;
+  font-weight: 600;
+  font-size: 1.2rem;
+  transition: 0.5s ease-in-out;
+}
+
+.addItem {
+  margin-top: 1rem;
+  margin-bottom: 3rem;
+}
+
+.addItem-button {
+  margin-top: 1rem;
+  margin-bottom: 2rem;
+  padding: 0.5rem 2rem;
+  outline: none;
+  border: none;
+  border: 0.125rem solid var(--primary-color);
+  background-color: white;
+  border-radius: 1rem;
+  color: var(--primary-color);
+  font-weight: 600;
+  font-size: 1rem;
+  transition: 0.5s ease-in-out;
+}
+
+.crud-func {
+  display: flex;
+  position: absolute;
+  bottom: 0;
+  height: 10%;
+  align-items: center;
+  margin-left: 2.5rem;
+  margin-bottom: 1rem;
+}
+
+.update-button {
+  padding: 0.5rem 0.5rem;
+  outline: none;
+  border: none;
+  border: 0.125rem solid var(--primary-color);
+  background-color: white;
+  border-radius: 1rem;
+  color: var(--primary-color);
+  font-weight: 600;
+  font-size: 1rem;
+  transition: 0.5s ease-in-out;
+}
+.delete-button {
+  padding: 0.5rem 0.5rem;
+  outline: none;
+  border: none;
+  border: 0.125rem solid var(--primary-color);
+  background-color: white;
+  border-radius: 1rem;
+  color: var(--primary-color);
+  font-weight: 600;
+  font-size: 1rem;
+  transition: 0.5s ease-in-out;
+  cursor: pointer;
+}
+
+.crud-form {
+  margin-top: 1rem;
+}
+
+.crud-form div {
+  margin-bottom: 1rem;
+}
+.crud-form label {
+  display: inline-block;
+  width: 10%;
+  text-align: left;
+}
+
+.crud-form input {
+  padding: 0.5rem 3rem;
+  outline: none;
+  border: none;
+  border: 0.1rem solid var(--primary-color);
+  background-color: white;
+  border-radius: 0.5rem;
+  font-size: 1rem;
+  transition: 0.5s ease-in-out;
+}
+
+#submit-button {
+  margin-top: 1rem;
+  color: var(--primary-color);
+  font-size: 1.2rem;
+  padding: 0.5rem 2rem;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+#login-button {
+  text-align: right;
+  margin-left: 2rem;
+  margin-top: 1rem;
+  color: var(--primary-color);
+  font-size: 1rem;
+  padding: 0.5rem 1rem;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+#register-btn {
+  margin-top: 1rem;
+  outline: none;
+  border: none;
+  border: 0.125rem solid var(--primary-color);
+  background-color: white;
+  border-radius: 1rem;
+  color: var(--primary-color);
+  font-weight: 600;
+  font-size: 1rem;
+  text-align: right;
+  margin-left: 2rem;
+  margin-top: 1rem;
+  color: var(--primary-color);
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+}
+
+#signupAdd {
+  font-size: 800;
+  color: var(--primary-color);
+}
+
+#resetAdd {
+  color: var(--primary-color);
+}
+
+@media screen and (max-width: 600px) {
+  .popup {
+    width: 80%;
+  }
+  .modal-img-holder {
+    position: absolute;
+    top: 0.2rem;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transition: 0.5s ease-in-out;
+    border-radius: 2rem;
+  }
+  .popup {
+    width: 80%;
+  }
+  .popup .close {
+    top: 5px;
+    right: 15px;
+  }
+  input#number {
+    text-align: center;
+    border: none;
+    border-top: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    margin: 0px;
+    width: 40px;
+    height: 40px;
+  }
+
+  input[type="number"]::-webkit-inner-spin-button,
+  input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+  .crud-func {
+    display: flex;
+    position: absolute;
+    bottom: 0;
+    height: 10%;
+    align-items: center;
+    margin-left: 1.5rem;
+    margin-bottom: 1rem;
+  }
+  .food-menu h3 {
+    font-size: 2rem;
+  }
+  .crud-form label {
+    display: inline-block;
+    width: 30%;
+    text-align: left;
+  }
+
+  .crud-form input {
+    padding: 0.5rem 2rem;
+    outline: none;
+    border: none;
+    border: 0.1rem solid var(--primary-color);
+    background-color: white;
+    border-radius: 0.5rem;
+    font-size: 1rem;
+    transition: 0.5s ease-in-out;
+  }
+}
+.changeValue {
+  margin: 0 auto;
+  text-align: center;
+}
+
+.value-button {
+  display: inline-block;
+  border: 1px solid #ddd;
+  width: 2rem;
+  height: 1rem;
+  text-align: center;
+  vertical-align: middle;
+  padding: 11px 0;
+  background: #eee;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.value-button:hover {
+  cursor: pointer;
+}
+.value-button p {
+  margin-top: -0.8rem;
+}
+form #decrease {
+  margin-right: -4px;
+  border-radius: 8px 0 0 8px;
+}
+
+form #increase {
+  margin-left: -4px;
+  border-radius: 0 8px 8px 0;
+}
+
+/* form #input-wrap {
+  margin: 0px;
+  padding: 0px;
+} */
+
+table {
+  width: 100%;
+  justify-content: center;
+}
+#cart-img {
+  height: 4rem;
+  position: relative;
+  overflow: hidden;
+  border-radius: 1rem;
+}
+
+#cart-img-holder {
+  position: absolute;
+  top: 0.2rem;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 1rem;
+}
+
+table input[type="number"] {
+  margin-top: -4rem;
+  text-align: center;
+}
+.checkout-btn {
+  background-color: transparent;
+  width: 8rem;
+  height: 4rem;
+  border-width: 5px;
+  border-radius: 8rem;
+  border-style: solid;
+  border-color: var(--primary-color);
+  cursor: pointer;
+}
+
+.checkout-btn h4 {
+  font-size: 1.2rem;
+  color: var(--primary-color);
+}
+
+@media screen and (max-width: 700px) {
+  table {
+    width: 100%;
+  }
+
+  table input[type="number"] {
+    width: 25%;
+  }
+
+  #cart-img {
+    height: 4rem;
+    width: 6rem;
+  }
+}
+
+/* order history */
+
+.order-wrap {
+  height: 100%;
+  transition: 0.4s ease-in-out;
+  cursor: pointer;
+  border-radius: 2rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  margin: auto;
+  vertical-align: middle;
+}
+
+.order-wrap:hover {
+  box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px,
+    rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+}
+
+.order-info {
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+}
+
+.order-info h3 {
+  color: var(--grey);
+  font-size: 1.2rem;
+}
+
+.modal-order-item-info {
+  overflow: hidden;
+  height: 25%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 3rem;
+  padding: 0 1rem;
+  text-align: left;
+}
+
+.modal-order-info h3 {
+  color: var(--primary-color);
+  font-size: 1.2rem;
+}
+
+.modal-order-info h4 {
+  color: var(--primary-color);
+  text-align: right;
+  margin-right: 0.5rem;
+  margin-top: 1rem;
+  font-size: 1.2rem;
+}
+
+.modal-order-info p {
+  margin-top: 2.5rem;
+  font-size: 1.1rem;
+}
+
+/* //user management */
+.user-mgmt-info {
+  justify-content: center;
+  display: inline;
+}
+.user-mgmt-info label {
+  margin-right: 60%;
+}
+
+@media screen and (max-width: 900px) {
+  .user-mgmt-info label {
+    margin-right: 20%;
+  }
+}
+
+.user-mgmt-wrap {
+  height: 100%;
+  transition: 0.4s ease-in-out;
+  border-radius: 2rem;
+  padding-top: 0.4rem;
+  padding-bottom: 0.4rem;
+  margin: auto;
+}
+.user-mgmt-wrap:hover {
+  box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px,
+    rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
 }
