--- a/4_Implementation/src/resource/views/home.hbs
+++ b/4_Implementation/src/resource/views/home.hbs
@@ -1,4 +1,4 @@
-<section id="home" class="fullheight align-items-center bg-img bg-img-fixed"
+    <section id="home" class="fullheight align-items-center bg-img bg-img-fixed"
         style="background-image: url(img/homepage.jpg);">
         <div class="container">
             <div class="row">
@@ -8,7 +8,9 @@
                             POS
                         </h1>
                         <p class="left-to-right play-on-scroll delay-2 intro">
-                            quote
+                            Combining the history, nature and thrilling culinary adventure from Western and Vietnamese food 
+                            to offer a truly unique dining experience, POS's lively and convivial ambiance will 
+                            entice you to discover new dishes while creating lasting memories in the heart of Saigon
                         </p>
                         <div class="left-to-right play-on-scroll delay-4">
                             <a href="menu">
