--- a/4_Implementation/src/resource/views/account.hbs
+++ b/4_Implementation/src/resource/views/account.hbs
@@ -1,16 +1,16 @@
 <section class="align-items-center bg-img bg-img-fixed" id="user-section"
-        style="background-image: url(img/banner3.jpg);">
+        style="background-image: url(img/homepage.jpg);">
         <div class="container">
             <div class="account">
                 <h1>My Account</h1>
                 <a href="/menu"><div class="user-func-container">
-                    <p>Menu</p>
+                    <span>Menu</span>
                 </div></a>
                 <a href="/history"><div class="user-func-container">
-                    <p>Order History</p>
+                    <span>Order History</span>
                 </div></a>
                 <div class="user-func-container3">
-                    <button id= "logoutBtn" type="submit" class="user-btn"><p>Log Out</p></button>
+                    <button id= "logoutBtn" type="submit" class="user-btn"><span>Log Out</span></button>
                 </div>
             </div>
         </div>
