--- a/4_Implementation/src/resource/views/admin_account.hbs
+++ b/4_Implementation/src/resource/views/admin_account.hbs
@@ -1,5 +1,5 @@
 <section class="align-items-center bg-img bg-img-fixed" id="user-section"
-        style="background-image: url(img/banner3.jpg);">
+        style="background-image: url(img/homepage.jpg);">
         <div class="container">
             <div class="account">
                 <h1>Hello Admin</h1>
