--- a/4_Implementation/src/resource/views/cart.hbs
+++ b/4_Implementation/src/resource/views/cart.hbs
@@ -1,5 +1,5 @@
 <section class="align-items-center bg-img bg-img-fixed" id="food-menu-section"
-    style="background-image: url(img/banner3.jpg);">
+    style="background-image: url(img/homepage.jpg);">
     <div class="container">
         <div class="food-menu">
             <form id="cart" action="">
@@ -39,7 +39,7 @@
             <h5>Total price:   </h5>
             <h3 id="totalPrice">{{SumTotal}}</h3>
             <br>
-            <button id="payButton" type="button" onclick="SendDataFromCart()" class="checkout-btn" ><h4>Checkout</h4></button>
+            <button id="payButton" type="button" onclick="SendDataFromCart()" class="checkout-btn" ><h4>Order</h4></button>
             </form>
         </div>
     </div>
