--- a/4_Implementation/src/resource/views/login.hbs
+++ b/4_Implementation/src/resource/views/login.hbs
@@ -1,5 +1,5 @@
 <section class="align-items-center bg-img bg-img-fixed" id="food-menu-section"
-        style="background-image: url(img/banner3.jpg);">
+        style="background-image: url(img/homepage.jpg);">
     <div class="container">
         <div class="food-menu">
             <h3>
