--- a/4_Implementation/src/public/css/style.css
+++ b/4_Implementation/src/public/css/style.css
@@ -970,6 +970,11 @@ section {
   transition: 0.5s ease-in-out;
 }
 
+.addtocart-button:hover {
+  background-color: var(--primary-color);
+  color: white;
+}
+
 .addItem {
   margin-top: 1rem;
   margin-bottom: 3rem;
